<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="rootLayout" type="id" />
    <item name="titleTextView" type="id" />
    <item name="changeButton" type="id" />
</resources>